Add jQuery library link to html head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="Homework assignment incorporating knowledge of jQuery." content="text">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
 
