--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
         </ul>
     </article>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
